@@ -70,18 +70,13 @@ int	SYSTEM_STAT(AGENT_REQUEST *request, AGENT_RESULT *result)
 
 	if (0 == strcmp(section, "ent"))
 	{
-		if (1 != request->nparam && 0 != collector->vmstat.shared_enabled)
+		if (1 != request->nparam)
 		{
 			SET_MSG_RESULT(result, zbx_strdup(NULL, "Invalid number of parameters."));
 			return SYSINFO_RET_FAIL;
 		}
-		else if (0 == collector->vmstat.shared_enabled)
-		{
-			SET_MSG_RESULT(result, zbx_strdup(NULL, "No data available in collector."));
-			return SYSINFO_RET_FAIL;
-		}
-		else
-			SET_DBL_RESULT(result, collector->vmstat.ent);
+
+		SET_DBL_RESULT(result, collector->vmstat.ent);
 	}
 	else if (NULL == type)
 	{
@@ -144,14 +139,36 @@ int	SYSTEM_STAT(AGENT_REQUEST *request, AGENT_RESULT *result)
 			SET_DBL_RESULT(result, collector->vmstat.cpu_id);
 		else if (0 == strcmp(type, "wa"))
 			SET_DBL_RESULT(result, collector->vmstat.cpu_wa);
-		else if (0 == strcmp(type, "pc") && collector->vmstat.shared_enabled)
+		else if (0 == strcmp(type, "pc"))
 			SET_DBL_RESULT(result, collector->vmstat.cpu_pc);
-		else if (0 == strcmp(type, "ec") && collector->vmstat.shared_enabled)
+		else if (0 == strcmp(type, "ec"))
 			SET_DBL_RESULT(result, collector->vmstat.cpu_ec);
-		else if (0 == strcmp(type, "lbusy") && collector->vmstat.shared_enabled)
+		else if (0 == strcmp(type, "lbusy"))
+		{
+			if (0 == collector->vmstat.shared_enabled)
+			{
+				SET_MSG_RESULT(result, zbx_strdup(NULL, "logical partition type is not \"shared\"."));
+				return SYSINFO_RET_FAIL;
+			}
+
 			SET_DBL_RESULT(result, collector->vmstat.cpu_lbusy);
-		else if (0 == strcmp(type, "app") && collector->vmstat.shared_enabled && collector->vmstat.pool_util_authority)
+		}
+		else if (0 == strcmp(type, "app"))
+		{
+			if (0 == collector->vmstat.shared_enabled)
+			{
+				SET_MSG_RESULT(result, zbx_strdup(NULL, "logical partition type is not \"shared\"."));
+				return SYSINFO_RET_FAIL;
+			}
+
+			if (0 == collector->vmstat.pool_util_authority)
+			{
+				SET_MSG_RESULT(result, zbx_strdup(NULL, "pool utilization authority not set."));
+				return SYSINFO_RET_FAIL;
+			}
+
 			SET_DBL_RESULT(result, collector->vmstat.cpu_app);
+		}
 		else
 		{
 			SET_MSG_RESULT(result, zbx_strdup(NULL, "Invalid second parameter."));
